deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app 
    spec:
      containers:
        - name: java-app 
          image: bhargavangadi18/java-app:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
