service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: simple-java
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31177
